--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello, world!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Junjin's Blog</title>
+</head>
+<body>
+
+<p>hello, world!</p>
+
+</body>
+</html>
